src/component/log_correlation/snapshots/envision__component__log_correlation__snapshot_tests__snapshot_with_title.snap
---
source: src/component/log_correlation/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Log Correlation ─────────────────────────────────────────────────────────────┐
│┌ API ────────────────────────────────┐┌ DB ─────────────────────────────────┐│
││00:00:01 INF ok                      ││00:00:01 INF ok                      ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
 Active: API  Sync: ON
